# nn-template

./: .gitignore  LICENSE  pyproject.toml
config/: config.yaml
config/_deprecated/: config.yaml
config/_deprecated/dir/: black_kits.yaml  black_tsukuba.yaml  ilc_4dim.yaml  lab.yaml  lab2.yaml  mini_black.yaml  mini_tsukuba.yaml  red.yaml  ti1080.yaml
config/_deprecated/exp/: k_kfold.yaml  kits_tutorial.yaml  t_1phase.yaml  t_2phase.yaml  t_48.yaml  t_kfold.yaml  t_kfold_2p.yaml  t_project_trans.yaml  tsukuba_tutorial.yaml
config/augmentation/: basic_augs.yaml
config/callbacks/: default_callbacks.yaml
config/data/: black.yaml  ilcgv.yaml  sample_data.yaml
config/dataset/: wheat.yaml
config/loss/: bce.yaml
config/model/: resnest101e.yaml  unet.yaml
config/patch/: tsukuba_96.yaml  tsukuba_96_1p.yaml
config/trainer/: default_trainer.yaml  sample_trainer.yaml
config/training/: default_training.yaml  sample_training.yaml
